# TripMap

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  release-please-config.json
.claude/: settings.json
.claude/skills/dev/: SKILL.md
.claude/skills/task/: SKILL.md
.github/workflows/: ci.yml  release.yml
backend/: Makefile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_location_country_code.py  b9f0eadb3db5_initial_schema.py  c3d4e5f6a7b8_add_user_settings.py
backend/app/: config.py  db.py  deps.py  main.py
backend/app/models/: __init__.py  album.py  album_location.py  base.py  location.py  user.py  user_location_state.py
backend/app/routers/: geocode.py  locations.py  me.py
backend/app/schemas/: geocode.py  location.py  user.py
backend/app/services/: auth.py  geocode.py  locations.py  users.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_auth.py  test_geocode.py  test_health.py  test_locations.py  test_me.py  test_spa_fallback.py
backend/tests/unit/: test_auth_service.py  test_geocode_service.py  test_location_schemas.py
frontend/: README.md  eslint.config.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/__tests__/: sanity.spec.ts
frontend/src/api/: client.ts  geocode.ts  locations.ts  me.ts
frontend/src/components/: AppNav.vue  MapCanvas.vue  (+4 more)
(+19 files in other folders)
