[project]
name = "tripmap-backend"
version = "0.1.0"
description = "TripMap backend — FastAPI service for self-hosted trip/vacation tracking."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.5,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<0.31",
    "alembic>=1.13,<2",
    "geoalchemy2>=0.15,<0.17",
]

[dependency-groups]
dev = [
    "ruff>=0.7,<0.8",
    "mypy>=1.13,<2",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "httpx>=0.27,<0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
